--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Frovoc's Blog 
-subtitle: ''
-description: ''
+title: 工路快聘 
+subtitle: '工路快聘学习中心'
+description: '工路快聘学习中心致力于让所有工路快聘的合伙人都能享受一站式学习体验，让工路快聘的合伙人都能够从中受益。'
 keywords:
 author: Wang.rd
 language: zh-CN
@@ -14,7 +14,7 @@ timezone: ''
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
 url: http://example.com
-permalink: :year/:month/:day/:title/
+permalink: :year/:month//:title/
 permalink_defaults:
 pretty_urls:
   trailing_index: true # Set to false to remove trailing 'index.html' from permalinks
@@ -97,7 +97,7 @@ ignore:
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: cactus
+theme: obsidian
 
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
